crates/reflect-tui/src/tui_core/bottom_pane/app_link_view/snapshots/reflect_tui__tui_core__bottom_pane__app_link_view__tests__app_link_view_install_suggestion_with_reason.snap
---
source: crates/reflect-tui/src/tui_core/bottom_pane/app_link_view/tests.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  Google Calendar
  Plan events and schedules.

  Plan and reference events from your calendar

  Install this app in your browser, then return here.
  Newly installed apps can take a few minutes to appear in /apps.
  After installed, use $ to insert this app into the prompt.


  › 1. Install on Reflect
    2. Back
  Use tab / ↑ ↓ to move, enter to select, esc to close
